<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.brendon.productivityapp.MainActivity">

    <Button
        android:id="@+id/SendData"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/SetApps"
        android:layout_marginStart="48dp"
        android:layout_marginTop="70dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/send_data"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:onClick="startMessageActivity"/>

    <Button
        android:id="@+id/Plan"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/SendData"
        android:layout_marginEnd="43dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/my_plan"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:onClick="startPlanActivity"/>

    <Button
        android:id="@+id/SetApps"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/SendData"
        android:layout_centerVertical="true"
        android:background="?attr/colorButtonNormal"
        android:text="@string/set_apps"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:onClick= "startSetApps"/>

    <Button
        android:id="@+id/Settings"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/Plan"
        android:layout_alignTop="@+id/SetApps"
        android:background="?attr/colorButtonNormal"
        android:onClick="startSettingsActivity"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Goal"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_above="@+id/SetApps"
        android:layout_alignStart="@+id/SetApps"
        android:layout_marginBottom="71dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/my_goal"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="visible"
        android:onClick="startViewGoalActivity"/>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Goal"
        android:layout_alignLeft="@id/Settings"
        android:background="?attr/colorButtonNormal"
        android:onClick="startStatsActivity"
        android:text="@string/usage_stats"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/testService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_service"
        android:onClick="testTimeTracking"/>
</RelativeLayout>
