<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.brendon.productivityapp.EditGoalActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="com.example.brendon.productivityapp.EditGoalActivity"
        android:id="@+id/linearLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewPromptGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unused_goal_text"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/editHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hours" />

        <EditText
            android:id="@+id/editMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/minutes" />

        </LinearLayout>

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:onClick="goNext"/>


    </LinearLayout>

</RelativeLayout>







