<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brendon.productivityapp.IntroductionMessageActivity">

    <TextView
        android:id="@+id/viewWelcomeFirstLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/unused_welcome_1"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewWelcomeFirstLine"
        android:layout_marginTop="50dp"
        android:lines="10"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/unused_welcome_2"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:id="@+id/textView2" />


    <Button
        android:id="@+id/Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/start"
        android:onClick="startFirstTimeActivity"/>

</RelativeLayout>
