<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brendon.productivityapp.DashboardFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/vpbContainer">

        <TextView
            android:id="@+id/allowance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/allowance"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/allowance"
            android:text="@string/allowance"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/allowance"
            android:layout_marginLeft="5dp"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/remaining"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/remaining"
            android:text="@string/remaining"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/remaining"
            android:layout_marginBottom="16dp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider1"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/app_usage"
            android:textAppearance="@android:style/TextAppearance.Material.Title" />


        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView10"
            android:animateLayoutChanges="true">

            <com.example.brendon.productivityapp.AdaptableListView
                android:id="@+id/appUsage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@+id/textView10"
            android:background="@drawable/gradient_horizontal" />

        <ImageView
            android:id="@+id/allowanceSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_settings_black_24dp" />

        <ImageView
            android:id="@+id/appSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/divider1"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_settings_black_24dp" />

        <RelativeLayout
            android:id="@+id/usageProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/textView10">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:id="@+id/vpbContainer">

        <com.example.brendon.productivityapp.VerticalProgressBar
            android:id="@+id/verticalProgressBar"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:animateLayoutChanges="true" />
    </android.support.v7.widget.CardView>

</RelativeLayout>
